k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ben10-app
  labels:
    app: ben10
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ben10
  template:
    metadata:
      labels:
        app: ben10
    spec:
      containers:
        - name: ben10
          image: acrdevtflearn.azurecr.io/ben10-app:v1
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
