k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ben10-ingress
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: jaiyelearningdevops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ben10-service
                port:
                  number: 80
